<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    android:layout_width="match_parent"
    android:layout_height="match_parent">

    <ImageView
        android:id="@+id/yuktubeLogoImageView"
        android:layout_width="40dp"
        android:layout_height="40dp"
        android:layout_marginStart="10dp"
        android:layout_marginTop="15dp"
        android:src="@drawable/youtube_red"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent" />

    <TextView
        android:id="@+id/yuktubeNameTextView"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:fontFamily="@font/kenyancoffee"
        android:text="YukTube"
        android:textSize="30dp"
        android:textStyle="bold"
        android:textColor="@color/black"
        android:layout_marginStart="5dp"
        app:layout_constraintStart_toEndOf="@+id/yuktubeLogoImageView"
        app:layout_constraintBottom_toBottomOf="@+id/yuktubeLogoImageView"
        app:layout_constraintTop_toTopOf="@+id/yuktubeLogoImageView" />

    <androidx.recyclerview.widget.RecyclerView
        android:id="@+id/categoryChannelRecyclerView"
        android:layout_width="match_parent"
        android:layout_height="120dp"
        android:layout_marginTop="15dp"
        android:layout_marginStart="10dp"
        android:layout_marginEnd="10dp"
        app:layout_constraintTop_toBottomOf="@id/yuktubeNameTextView"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        />

    <HorizontalScrollView
        android:id="@+id/categoryHorizontalScrollView"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:scrollbars="none"
        app:layout_constraintTop_toBottomOf="@id/categoryChannelRecyclerView"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintEnd_toEndOf="parent">

        <LinearLayout
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:orientation="horizontal">

            <TextView
                android:id="@+id/musicTextView"
                android:layout_width="60dp"
                android:layout_height="30dp"
                android:layout_marginStart="10dp"
                android:layout_marginTop="16dp"
                android:background="@drawable/home_selected_category_background"
                android:gravity="center"
                android:paddingHorizontal="10dp"
                android:text="@string/search_music_category"
                android:textColor="@color/white"
                android:textStyle="bold"
                app:layout_constraintStart_toEndOf="@+id/entireCategoryTextView"
                app:layout_constraintTop_toBottomOf="@+id/searchBarEditText" />

            <TextView
                android:id="@+id/sportTextView"
                android:layout_width="60dp"
                android:layout_height="30dp"
                android:layout_marginStart="10dp"
                android:layout_marginTop="16dp"
                android:background="@drawable/home_default_category_background"
                android:gravity="center"
                android:paddingHorizontal="10dp"
                android:text="@string/search_sport_category"
                android:textColor="@color/black"
                android:textStyle="bold"
                app:layout_constraintStart_toEndOf="@+id/musicTextView"
                app:layout_constraintTop_toBottomOf="@+id/searchBarEditText" />

            <TextView
                android:id="@+id/movieTextView"
                android:layout_width="60dp"
                android:layout_height="30dp"
                android:layout_marginStart="10dp"
                android:layout_marginTop="16dp"
                android:background="@drawable/home_default_category_background"
                android:gravity="center"
                android:paddingHorizontal="10dp"
                android:text="@string/search_movie_category"
                android:textColor="@color/black"
                android:textStyle="bold"
                app:layout_constraintStart_toEndOf="@+id/sportTextView"
                app:layout_constraintTop_toBottomOf="@+id/searchBarEditText" />

            <TextView
                android:id="@+id/gameTextView"
                android:layout_width="60dp"
                android:layout_height="30dp"
                android:layout_marginStart="10dp"
                android:layout_marginTop="16dp"
                android:background="@drawable/home_default_category_background"
                android:gravity="center"
                android:paddingHorizontal="10dp"
                android:text="@string/search_music_category"
                android:textColor="@color/black"
                android:textStyle="bold"
                app:layout_constraintStart_toEndOf="@+id/entireCategoryTextView"
                app:layout_constraintTop_toBottomOf="@+id/searchBarEditText" />

            <TextView
                android:id="@+id/newsTextView"
                android:layout_width="60dp"
                android:layout_height="30dp"
                android:layout_marginStart="10dp"
                android:layout_marginTop="16dp"
                android:background="@drawable/home_default_category_background"
                android:gravity="center"
                android:paddingHorizontal="10dp"
                android:text="@string/search_news_category"
                android:textColor="@color/black"
                android:textStyle="bold"
                app:layout_constraintStart_toEndOf="@+id/musicTextView"
                app:layout_constraintTop_toBottomOf="@+id/searchBarEditText" />

            <TextView
                android:id="@+id/tarvelTextView"
                android:layout_width="60dp"
                android:layout_height="30dp"
                android:layout_marginStart="10dp"
                android:layout_marginTop="16dp"
                android:background="@drawable/home_default_category_background"
                android:gravity="center"
                android:paddingHorizontal="10dp"
                android:text="@string/search_travel_category"
                android:textColor="@color/black"
                android:textStyle="bold"
                app:layout_constraintStart_toEndOf="@+id/sportTextView"
                app:layout_constraintTop_toBottomOf="@+id/searchBarEditText" />

            <TextView
                android:id="@+id/shoppingTextView"
                android:layout_width="60dp"
                android:layout_height="30dp"
                android:layout_marginStart="10dp"
                android:layout_marginTop="16dp"
                android:background="@drawable/home_default_category_background"
                android:gravity="center"
                android:paddingHorizontal="10dp"
                android:text="@string/search_shopping_category"
                android:textColor="@color/black"
                android:textStyle="bold"
                app:layout_constraintStart_toEndOf="@+id/sportTextView"
                app:layout_constraintTop_toBottomOf="@+id/searchBarEditText" />
        </LinearLayout>
    </HorizontalScrollView>

    <androidx.recyclerview.widget.RecyclerView
        android:id="@+id/categoryVideoRecyclerView"
        android:layout_width="match_parent"
        android:layout_height="210dp"
        android:layout_marginTop="15dp"
        android:layout_marginStart="10dp"
        android:layout_marginEnd="10dp"
        app:layout_constraintTop_toBottomOf="@id/categoryHorizontalScrollView"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        />

    <TextView
        android:id="@+id/popularVideoTextView"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginStart="10dp"
        android:layout_marginTop="10dp"
        app:layout_constraintTop_toBottomOf="@id/categoryVideoRecyclerView"
        app:layout_constraintStart_toStartOf="parent"
        android:text="인기 급상승"
        android:textColor="@color/black"
        android:textStyle="bold"
        android:textSize="15dp"
        />

    <androidx.recyclerview.widget.RecyclerView
        android:id="@+id/popularVideoRecyclerView"
        android:layout_width="match_parent"
        android:layout_height="210dp"
        android:layout_marginTop="10dp"
        android:layout_marginStart="10dp"
        android:layout_marginEnd="10dp"
        app:layout_constraintTop_toBottomOf="@id/popularVideoTextView"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintEnd_toEndOf="parent"/>




</androidx.constraintlayout.widget.ConstraintLayout>